# omp-pathfinder

./: .gitignore  .gitmodules  CMakeLists.txt  main.cc  natives.cc  pathfinder-component.cc  pathfinder-component.hpp  pathfinder-utils.hpp
.github/workflows/: build.yml
examples/: npc.pwn
include/: omp_pathfinder.inc
